27-11-18

XML named region option to export data from a report to an XML file


26-11-18

See results of importing on the uploads list

Scroll import error/feedback

! Fix groovy to work with the new uploaded file object


21-11-18

Will execute regions 'az_query<regionname>' before populating region

Removed redundant "set up file" functionality

Sorts large sets where 'from' or 'to' is specified

Refactoring parameters passed around while uploading data - intitial effect is improved feedback from importing which will be improved further

! Fixed file handler error that was crashing the server


16-11-18

NPE catch on outside case in query parsing (from/to in a list), optimiseation when resetting large children sets on a name

Fixed bug - confusion between fileName and fileSource when setting up 'DATAIMPORT'


15-11-18

! Import null pointer fix

Added 'linecells' (the number of actual cells on an import line)

Avoids filling in values where the cell count > heading count

Bug fix on report list and support for non admin user menus in the Excel plugin


13-11-18

Shows 500 recently updated files

Fixed bug - SetsImport required FileSource - not fileName

Shows the sheet name when reporting the import

! Will accept a user choice list (from UserDAO) with multiple choices separated by commas

Reports associated with no databases no longer hidden


07-11-18

Pending upload search

Splits attributes where there is a NEXTATTRIBUTE (||) symbol

New heading 'replace' which accepts the last value rather than adding all values


06-11-18

Login message and colour configurable to distinguish between systems.

Important bug fix to new import code! (it was tripped up by very large numbers)


05-11-18-2

Formatting import error messages.

Zap pending uploads when deleting a database. Logon page override configurable. Factor properties code.


05-11-18

Updated groovy import script for premium.
