@@ -169,4 +169,11 @@ public class UploadedFile implements Serializable {
     public void addToProcessingDuration(long convertTime) {
         processingDuration += convertTime;
     }
+
+    public String getParameter(String key) {
+        if (parameters != null && key != null) { // not sure if parameters can be null? not a biggy . . .
+            return parameters.get(key);
+        }
+        return null;
+    }
 }
