@@ -1,3 +1,8 @@
+27-11-18-2
+
+! Groovy script bug fix
+
+
 27-11-18
 
 XML named region option to export data from a report to an XML file
